# lunabot

./: .gitignore  CLAUDE.md  Makefile  Makefile.am  Makefile.simple  README.md  configure.ac  lunabot.c  lunabot.conf.json
src/: Makefile.am  liblunabot.c  lunabot.c  lunabot.h
src/lib/: Makefile.am  api.c  health-check.c  irc.c  json.c  liblunabot.c  liblunabot.h  log.c  sanitize.c  verify-signature.c  webhook.c
test/: .secret  Dockerfile.ergo  Dockerfile.lunabot  docker-compose.yml  lunabot.conf.json  run-tests.sh
test/ergo/: generate-certs.sh  ircd.yaml
test/observer/: Makefile  observer.c
test/payloads/: checkrun_comment_completed.json  checkrun_lint_failure.json  checkrun_lint_failure_same_repo.json  checkrun_lint_success.json  checkrun_lint_success_same_repo.json  pr_closed_merged.json  pr_closed_not_merged.json  pr_labeled.json  pr_opened.json  pr_unlabeled.json  push_commits.json  status_failure.json  status_pending.json  status_success.json
