ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src

EXTRA_DIST = lunabot.conf.json Makefile.simple README.md LICENSE CLAUDE.md

MAINTAINERCLEANFILES = \
	aclocal.m4 \
	ar-lib \
	compile \
	config.guess \
	config.sub \
	configure \
	depcomp \
	install-sh \
	ltmain.sh \
	missing \
	Makefile.in \
	m4/libtool.m4 \
	m4/ltoptions.m4 \
	m4/ltsugar.m4 \
	m4/ltversion.m4 \
	m4/lt~obsolete.m4
